# EscapeDungeonDoome

./: .gitignore  AGENTS.md  COMMANDS.md  PLAN.md  QUESTIONS.md  README.md  TEST.md  debug_screenshots.py  game_logic.py  game_state.py  index.html  package.json  physics.py  pyproject.toml  requirements.txt  run.sh  server.py  start.sh
.opencode/agents/: code-tester.md  code-writer.md  documenter.md  e2e-tester.md  game-designer.md  graphics-artist.md  meta-agent.md  orchestrator.md  task-planner.md  ux-designer.md
docs/: AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_V2.md  BLACK_SCREEN_DIAGNOSTIC_PLAN.md  CODE.md  COMPONENT_TRANSFORMATION_PLAN.md  GUIDE.md  PYGAME_MIGRATION_PLAN.md  REFACTORING_PLAN.md  REVIEW.md  TESTS.md
maps/: arena.json  arena2.json  base.json  enemy_test.json  maze.json  mission.json
public/: index.html
public/js/: client.js  config.js  game.js  input.js  main.js  renderer.js  ui.js
shared/: config.json  constants.js  constants.py  map-data.json  protocol.json
src/: __init__.py  config.py  game.py  input_handler.py  main.py  renderer.py
src/engine/: event_system.py  game_engine.py  game_state.py  system_registry.py
src/entities/: __init__.py  base.py  components.py  enemy.py  factory.py  player.py
src/factory/: entity_factory.py
src/input/: __init__.py  actions.py  bindings.py  manager.py
src/physics/: __init__.py  interfaces.py  physics.py  raycasting.py
src/server/: config.py  game-engine.py  game_logic.py  game_state.py  pathfinding.py  physics.py  server.py  weapon_system.py
src/ui/: hud.py  (+5 more)
tests/: conftest.py  game.test.js
(+49 files in other folders)
