[project]
name = "webdoom"
version = "1.0.0"
description = "WebDoom - Pygame Edition - A DOOM-style FPS game"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pygame>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]